Fix report sighting overflow bug

--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -1,3 +1,3 @@
-.MuiListItem-root:hover {
+.dark-menu-item:hover {
   background-color: #4c4c4c !important;
 }
